Fixed profile modal appearing behind content

--- a/app/assets/stylesheets/partials/_profile_modal.sass
+++ b/app/assets/stylesheets/partials/_profile_modal.sass
@@ -2,6 +2,8 @@
     display: none
     opacity: 0
 
+    z-index: 1
+
     position: absolute
     top: 45px
     right: 0
